[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.10,<3.13"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
quality = [
    "mypy==1.11.2",
    "pre-commit==3.8.0",
]
test = [
    "pytest==8.3.2"
]

# [project.scripts]
# tool = "template.cli.tool:main"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_traceback = true
install_types = true
scripts_are_modules = true

[[tool.mypy.overrides]]
module = [
    "pytest",
]
allow_untyped_decorators = false

[tool.black]
color = true
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
include_trailing_comma = true
